Changes made in UI

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -172,6 +172,67 @@
     "input_seq = tokenizer.texts_to_sequences([peptide])\n",
     "padded_seq = pad_sequences(input_seq, maxlen=50)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8af8acab",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start as the Python Environment 'venv_p (Python 3.10.17)' is no longer available. Consider selecting another kernel or refreshing the list of Python Environments."
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pickle\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load selected top 50 features\n",
+    "with open(\"data/Feature_50.pkl\", \"rb\") as f:\n",
+    "    Feature_50 = pickle.load(f)\n",
+    "\n",
+    "# Define constants\n",
+    "max_length = 50\n",
+    "amino_acids = 'ACDEFGHIKLMNPQRSTVWY'  # Standard amino acids\n",
+    "AA_TO_INDEX = {aa: i for i, aa in enumerate(amino_acids)}\n",
+    "\n",
+    "# Pad peptide sequence to max length\n",
+    "def pad_sequence(seq, max_length):\n",
+    "    return seq.ljust(max_length, 'X')[:max_length]\n",
+    "\n",
+    "# One-hot encode a sequence\n",
+    "def one_hot_encode(seq, aa_to_index):\n",
+    "    num_classes = len(aa_to_index)\n",
+    "    encoded = np.zeros((max_length, num_classes), dtype=int)\n",
+    "    for i, aa in enumerate(seq):\n",
+    "        if aa in aa_to_index:\n",
+    "            encoded[i, aa_to_index[aa]] = 1\n",
+    "    return encoded.flatten()\n",
+    "\n",
+    "# Main preprocessing function for model input\n",
+    "def preprocess_input(seq):\n",
+    "    padded = pad_sequence(seq.upper(), max_length)\n",
+    "    encoded = one_hot_encode(padded, AA_TO_INDEX)\n",
+    "\n",
+    "    # Convert to DataFrame and filter top features\n",
+    "    column_names = [f'{aa}_Pos_{pos+1}' for pos in range(max_length) for aa in amino_acids]\n",
+    "    df = pd.DataFrame([encoded], columns=column_names)\n",
+    "    return df[Feature_50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ec15e68",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
